--- a/index.html
+++ b/index.html
@@ -57,6 +57,14 @@
             JS is the interactive part of websites. It can be used to provided
             interactivity.
           </li>
+          <li>
+            A variable is a named container that allows us to store data in our
+            code.
+          </li>
+          <li>
+            Control flow is the order in which a computer executes code in a
+            script.
+          </li>
         </ul>
       </section>
     </main>
