--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>Prework Study Guide</title>
   </head>
   <body>
+    <h3>
+      Please note that at this moment my site and projects are currently down in
+      order to accomodate and host this prework "Prework Study Guide" project
+      for the upcoming, 16-week bootcamp, that I am attending.<br />
+    </h3>
     <header id="top">
       <h1>Prework Study Guide</h1>
       <img
