Commit to fix disabled SAVE button on Github

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       order to accomodate and host this prework "Prework Study Guide" project
       for the upcoming, 16-week bootcamp, that I am attending.<br />
     </h3>
+    <!-- a comment to fix disabled 'SAVE' button on Github -->
     <header id="top">
       <h1>Prework Study Guide</h1>
       <img
