--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     <!-- a comment to fix disabled 'SAVE' button on Github -->
     <header id="top">
       <h1>Prework Study Guide</h1>
-      <img src="bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <img
+        src="bowtie-cat-renamed.png"
+        alt="Profile image of cat wearing a bow tie."
+      />
       <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
     <main>
